Changes since last release:
VERSION 0.6.xx
DATE 0x/xx/2011
40th Alpha Release

NEWS:

NEW: [features/enhancements]
+Remember Shelf layout and selected tab when application is restarted.
+Improve Python autoindenter to better handle more conditions in regards to
brackets and parens.
+Autocomp and calltip shortcuts are now customizable.
+Add Bookmark manager window to Shelf

LIBRARY:
+Support ControlBars in on left and right side of ControlBox.

BUG FIXES:
+Fix issue that could result in crash when rapidly clicking on notebook buttons.
+Fix minor display issue in update checker gauge.
+Fix behavior of left/right arrow key motions in vim emulation mode to better
emulate vi.
+Fix issue where an invalid encoding would be detected as the default encoding
on some systems.
+Fix issue where ToolBar would not resize properly when appearance settings
where changed to use different size icons.
+Fix screen refresh issue in tab control where it wouldn't get repainted properly
in some cases.
+Fix crash in reload with encoding when the encoding fails to decode the text.
+Fix pipe character not being accepted in keybindings editor.
+Fix angle brackets not being handled properly in keybindings editor.
+Fix issue with window not being brought to front in all cases when opening
file with "Edit with Editra..." shortcut on Windows.
+Fix issue with showing calltips for buffers that are not visible.

#-----------------------------------------------------------------------------#
VERSION 0.6.00
DATE 01/15/2011
39th Alpha Release

NEWS:

NEW: [features/enhancements]
+Improve Python AutoIndenter to better handle brackets (patch from Jens)
+Add Copy Filename option to tab menu (patch from Michael Rans)
+Extend Vi emulation mode to support motions for Enter, Space, and Backspace
+Improve file type detection for files that don't have file extensions.
+Add support for Cilk syntax highlighting (patch from michael.champigny)

BUG FIXES:
+Fix Python 2.5 compatibility issue.